<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/frame_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_weight="0.24">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:background="@color/blue_homepage_item"
            android:layout_height="match_parent">
            <include
                android:id="@+id/ambient_temperature"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                layout="@layout/homepage_item"/>
            <include
                android:id="@+id/ambient_humidity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                layout="@layout/homepage_item"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/sky_blue_homepage_item"
            android:layout_marginLeft="4dp"
            android:layout_height="match_parent">
            <include
                android:id="@+id/swimming_pool_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/homepage_item"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:background="@color/green_homepage_item"
            android:layout_height="match_parent">
            <include
                android:id="@+id/ph_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/homepage_item"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:background="@color/pink_homepage_item"
            android:layout_height="match_parent">
            <include
                android:id="@+id/orp_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/homepage_item"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:background="@color/deep_blue_homepage_item"
            android:layout_height="match_parent">
            <include
                android:id="@+id/chlorine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/homepage_item"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:background="@color/sea_blue_homepage_item"
            android:layout_height="match_parent">
            <include
                android:id="@+id/limpid_grade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/homepage_item"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:layout_weight="0.76">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:layout_weight="0.856">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="5dp"
                android:layout_weight="0.11">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/page_run_text_color"
                    android:text="@string/current_mode"/>

                <TextView
                    android:id="@+id/tv_current_mode"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:background="@color/page_run_text_color"
                    android:textColor="@android:color/white"
                    android:paddingBottom="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/filter"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                android:layout_weight="0.89">
                <com.sunseen.spcontrolsystem.view.SPStatusView
                    android:id="@+id/sp_status_view"
                    android:layout_width="464dp"
                    android:layout_height="217dp" />
            </FrameLayout>
            
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.004"
            android:background="@android:color/transparent" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:layout_weight="0.140">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:background="@color/sp_running_mode_bg"
                android:layout_weight="0.64">

                <TextView
                    android:id="@+id/tv_sp_running_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sp_running_mode"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textColor="@color/text_white"
                    android:textSize="11sp" />

                <!--正常运行-->
                <TextView
                    android:id="@+id/normal_operation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_operation"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:textSize="8sp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:drawableRight="@drawable/tv_right_no_focus"
                    android:background="@drawable/tv_sp_running_bg"/>

                <LinearLayout
                    android:id="@+id/normal_operation_item"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:visibility="gone"
                    android:background="@color/deep_blue_homepage_item"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_filter_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:paddingTop="3dp"
                        android:textSize="8sp"
                        android:text="@string/filter"/>
                    <TextView
                        android:id="@+id/tv_not_filter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:paddingTop="3dp"
                        android:textSize="8sp"
                        android:text="@string/not_filter"/>
                    <TextView
                        android:id="@+id/tv_self_drainage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:paddingTop="3dp"
                        android:textSize="6sp"
                        android:text="@string/self_drainage"/>
                    <TextView
                        android:id="@+id/tv_force_drainage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:paddingTop="3dp"
                        android:textSize="6sp"
                        android:text="@string/force_drainage"/>
                    <TextView
                        android:id="@+id/tv_backwash_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:paddingTop="3dp"
                        android:textSize="8sp"
                        android:text="@string/backwash_mode"/>
                    <TextView
                        android:id="@+id/tv_close_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:textSize="8sp"
                        android:paddingTop="3dp"
                        android:text="@string/close_mode"/>
                </LinearLayout>

                <!--水温模式-->
                <TextView
                    android:id="@+id/water_temperature_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/water_temperature_mode"
                    android:clickable="true"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:focusable="true"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="8sp"
                    android:textColor="@android:color/white"
                    android:drawableRight="@drawable/tv_right_no_focus"
                    android:background="@drawable/tv_sp_running_bg"/>

                <LinearLayout
                    android:id="@+id/water_temperature_mode_item"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:background="@color/deep_blue_homepage_item"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_water_heating_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:textSize="8sp"
                        android:text="@string/water_heating_mode"/>
                    <TextView
                        android:id="@+id/tv_room_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="3dp"
                        android:textSize="8sp"
                        android:text="@string/room_temperature"/>
                </LinearLayout>

                <!--除湿模式-->
                <TextView
                    android:id="@+id/dehumidify_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dehumidify_mode"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textStyle="bold"
                    android:focusable="true"
                    android:clickable="true"
                    android:textColor="@android:color/white"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="8sp"
                    android:drawableRight="@drawable/tv_right_no_focus"
                    android:background="@drawable/tv_sp_running_bg"/>
                <LinearLayout
                    android:id="@+id/dehumidify_mode_item"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/deep_blue_homepage_item"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_dehumidify_heat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:textSize="8sp"
                        android:text="@string/dehumidify_heat"/>
                    <TextView
                        android:id="@+id/tv_dehumidify_heat_water"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:textSize="8sp"
                        android:paddingTop="5dp"
                        android:text="@string/dehumidify_heat_water"/>
                    <TextView
                        android:id="@+id/tv_dehumidify_refrigeration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:textSize="8sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="3dp"
                        android:text="@string/dehumidify_refrigeration"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.012"
                android:background="@android:color/transparent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/blue_homepage_item"
                android:layout_weight="0.35">
                <LinearLayout
                    android:id="@+id/computer_room_running"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="2dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/computer_room_running" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="7sp"
                        android:textColor="@android:color/white"
                        android:text="@string/computer_room_running"/>
                </LinearLayout>

                <com.sunseen.spcontrolsystem.view.SwitchView
                    android:id="@+id/underwater_total_lamp_switch"
                    android:layout_width="32dp"
                    android:layout_height="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textSize="5sp"
                    android:textColor="@android:color/white"
                    android:text="@string/underwater_total_lamp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>